--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
+    <meta name="color-scheme" content="light only" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
